--- a/package.json
+++ b/package.json
@@ -20,5 +20,25 @@
   "bugs": {
     "url": "https://github.com/BidziS/bookstore-frontend/issues"
   },
-  "homepage": "https://github.com/BidziS/bookstore-frontend#readme"
+  "homepage": "https://github.com/BidziS/bookstore-frontend#readme",
+  "devDependencies": {
+    "@types/angular": "^1.6.26",
+    "babel-core": "^6.25.0",
+    "babel-loader": "^7.1.1",
+    "babel-preset-env": "^1.6.0",
+    "css-loader": "^0.28.4",
+    "express": "^4.15.3",
+    "file-loader": "^0.11.2",
+    "html-loader": "^0.4.5",
+    "node-sass": "^4.5.3",
+    "open": "0.0.5",
+    "sass-loader": "^6.0.6",
+    "style-loader": "^0.18.2",
+    "url-loader": "^0.5.9",
+    "webpack": "^3.3.0"
+  },
+  "dependencies": {
+    "@uirouter/angularjs": "^1.0.5",
+    "angular": "^1.6.5"
+  }
 }
