--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Frontend for simple application for boost programming skill",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "open": "babel-node tools/srcServer.js"
   },
   "repository": {
     "type": "git",
@@ -23,6 +23,7 @@
   "homepage": "https://github.com/BidziS/bookstore-frontend#readme",
   "devDependencies": {
     "@types/angular": "^1.6.26",
+    "babel-cli": "^6.24.1",
     "babel-core": "^6.25.0",
     "babel-loader": "^7.1.1",
     "babel-preset-env": "^1.6.0",
@@ -30,12 +31,15 @@
     "express": "^4.15.3",
     "file-loader": "^0.11.2",
     "html-loader": "^0.4.5",
+    "html-webpack-plugin": "^2.29.0",
     "node-sass": "^4.5.3",
     "open": "0.0.5",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.18.2",
     "url-loader": "^0.5.9",
-    "webpack": "^3.3.0"
+    "webpack": "^3.3.0",
+    "webpack-dev-middleware": "^1.11.0",
+    "webpack-hot-middleware": "^2.18.2"
   },
   "dependencies": {
     "@uirouter/angularjs": "^1.0.5",
